# server_task

./: CMakeLists.txt  README.md
include/: client.hpp  common.hpp  server.hpp
src/: CMakeLists.txt  client.cpp  client_main.cpp  server.cpp  server_main.cpp
